Implement mode and increase buttons

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,18 @@
   width: 300px;
 }
 
+.mode-btn {
+  bottom: 20px;
+  left: 20px;
+  position: absolute;
+}
+
+.increase-btn {
+  left: 20px;
+  position: absolute;
+  top: 20px;
+}
+
 .remove-btn {
   position: absolute;
   right: 20px;
