--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,12 @@
   top: 20px;
 }
 
+.toggle-light-btn {
+  bottom: 20px;
+  position: absolute;
+  right: 20px;
+}
+
 .remove-btn {
   position: absolute;
   right: 20px;
