Refactor view rendering and models architecture
Instead of recreating the view on every render, it now only updates
some specific DOM elements.

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,12 @@
   width: 300px;
 }
 
+.time-text {
+  background-color: red;
+  border-radius: 0.25rem;
+  padding: 1rem;
+}
+
 .mode-btn {
   bottom: 20px;
   left: 20px;
