--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,10 @@ li {
   width: 250px;
 }
 
+li > button {
+  position: absolute;
+}
+
 .time-text {
   background-color: #ffffff;
   border-radius: 0.25rem;
@@ -28,23 +32,23 @@ li {
 .mode-btn {
   bottom: 20px;
   left: 20px;
-  position: absolute;
 }
 
 .increase-btn {
   left: 20px;
-  position: absolute;
   top: 20px;
+}
+
+.reset-btn {
+  right: 20px;
 }
 
 .toggle-light-btn {
   bottom: 20px;
-  position: absolute;
   right: 20px;
 }
 
 .remove-btn {
-  position: absolute;
   right: 20px;
   top: 20px;
 }
