--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,40 @@
+*,
+::before,
+::after {
+  border-width: 0;
+  box-sizing: border-box;
+}
+
+html,
+:host {
+  -moz-tab-size: 4;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-text-size-adjust: 100%;
+  font-family:
+    system-ui,
+    "Segoe UI",
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji";
+  line-height: 1.5;
+  tab-size: 4;
+}
+
 body {
   background-color: #f3f4f6;
+  color: #111827;
+  line-height: inherit;
+  margin: 0;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  row-gap: 1rem;
 }
 
 ul {
@@ -7,68 +42,104 @@ ul {
   flex-wrap: wrap;
   gap: 1rem;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 li {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 2px solid #111827;
+  border-radius: 50%;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   height: 250px;
   position: relative;
   width: 250px;
 }
 
+li > button {
+  background-color: #e5e7eb;
+  border: 1px solid #111827;
+  border-radius: 50%;
+  height: 24px;
+  position: absolute;
+  width: 24px;
+}
+
+li > button:hover {
+  background-color: #d1d5db;
+}
+
+
+button,
+select {
+  color: inherit;
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-size: 100%;
+  font-variation-settings: inherit;
+  font-weight: inherit;
+  letter-spacing: inherit;
+  line-height: inherit;
+  margin: 0;
+  padding: 0;
+  text-transform: none;
+}
+
+button {
+  background-color: transparent;
+  background-image: none;
+  cursor: pointer;
+}
+
+select {
+  background-color: #e5e7eb;
+  border: 1px solid #9ca3af;
+  border-radius: 0.25rem;
+  max-height: 400px;
+  padding: 0.5rem 0.75rem;
+}
+
+.topbar {
+  column-gap: 0.5rem;
+  display: flex;
+}
+
+.topbar button {
+  background-color: #2563eb;
+  border: 1px solid #2563eb;
+  border-radius: 0.25rem;
+  color: #f3f4f6;
+  padding: 0.5rem 0.75rem;
+}
+
+.topbar button:hover {
+  background-color: #1d4ed8;
+}
+
 .digital {
   align-items: center;
-  background-color: #4b5563;
-  border-radius: 1.5rem;
+  background-image: url("https://static.posters.cz/image/750/affiches-et-posters/spongebob-group-i10223.jpg");
   display: flex;
   justify-content: center;
 }
 
-.analog {
-  border: 2px solid red;
-  border-radius: 50%;
-}
-
-.hand {
-  bottom: 50%;
-  left: 50%;
-  position: absolute;
-  transform-origin: bottom;
-  width: 2px;
-}
-
-.h-0 {
-  background-color: blue;
-  height: 60px;
-}
-
-.h-1 {
-  background-color: green;
-  height: 90px;
-}
-
-.h-2 {
-  background-color: red;
-  height: 120px;
-}
-
-li > button {
-  position: absolute;
-}
-
 .time-text {
-  background-color: #ffffff;
+  background-color: #f3f4f6;
+  border: 1px solid #111827;
   border-radius: 0.25rem;
   padding: 1rem;
 }
 
 .switch-mode-btn {
-  bottom: 20px;
-  left: 20px;
+  bottom: 40px;
+  left: 40px;
 }
 
 .increase-btn {
-  left: 20px;
-  top: 20px;
+  left: 40px;
+  top: 40px;
 }
 
 .reset-btn {
@@ -77,15 +148,43 @@ li > button {
 
 .toggle-time-format-btn {
   left: 20px;
-  top: 60px;
 }
 
 .toggle-light-btn {
-  bottom: 20px;
-  right: 20px;
+  bottom: 40px;
+  right: 40px;
 }
 
 .remove-btn {
-  right: 20px;
-  top: 20px;
+  right: 40px;
+  top: 40px;
+}
+
+.analog {
+  background-image: url("https://images.rtl.fr/~c/770v513/rtl/www/1170955-la-famille-simpson.jpg");
+}
+
+.hand {
+  bottom: 50%;
+  left: 50%;
+  position: absolute;
+  transform-origin: bottom;
+}
+
+.h-0 {
+  background-color: #111827;
+  height: 70px;
+  width: 6px;
+}
+
+.h-1 {
+  background-color: #111827;
+  height: 100px;
+  width: 4px;
+}
+
+.h-2 {
+  background-color: red;
+  height: 110px;
+  width: 2px;
 }
